codepkg/objects/CaseItem__c.object
<CustomObject>
    <fields>
        <fullName>CTP_Claim_Number__c</fullName>
        <description>This field is created as part of DCR-268</description>
        <label>Claim Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTP_Date_of_accident__c</fullName>
        <description>Insurer lodges reply requested by the Officer of DRS to the claimant&apos;s application -DCR-551</description>
        <formula>Case__r.CTP_Date_of_accident__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of accident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTP_Declined_Accepted__c</fullName>
        <description>DCR-586</description>
        <formula>IF( TEXT(Status__c)==&apos;Accepted by Decision maker&apos;, IMAGE(&quot;/servlet/servlet.FileDownload?file=0150k000000DdPt&quot;,&quot;Green&quot;,20,20), IF( TEXT(Status__c)==&apos;Declined by Decision maker&apos;,IMAGE(&quot;/servlet/servlet.FileDownload?file=0150k000000DdPy&quot;,&quot;Red&quot;,20,20),null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Declined / Accepted</label>
        <type>Text</type>
    </fields>
</CustomObject>